--- a/Reflection.Tests/Reflection.Tests.csproj
+++ b/Reflection.Tests/Reflection.Tests.csproj
@@ -11,13 +11,27 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="Shouldly" Version="4.2.1" />
         <PackageReference Include="xunit" Version="2.8.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Reflection\Reflection.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="CTSCore">
+        <HintPath>..\Library\CTSCore.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
