--- a/Reflection/Reflection.csproj
+++ b/Reflection/Reflection.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="CTSCore">
+        <HintPath>..\Library\CTSCore.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
