--- a/Reflection.Tests/Reflection.Tests.csproj
+++ b/Reflection.Tests/Reflection.Tests.csproj
@@ -34,4 +34,11 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="CtsCoreDbSetTypeList" />
+      <Content Include="CtsCoreDbSetTypeList">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
