--- a/ModelBuilder/ModelBuilder.csproj
+++ b/ModelBuilder/ModelBuilder.csproj
@@ -5,14 +5,23 @@
         <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>EntityDecompiler</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
+      <PackageReference Include="Scriban" Version="5.10.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Reflection\Reflection.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Templates\dto.txt" />
+      <Content Include="Templates\dto.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
