--- a/Reflection.Tests/Reflection.Tests.csproj
+++ b/Reflection.Tests/Reflection.Tests.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
       <ProjectReference Include="..\Reflection\Reflection.csproj" />
     </ItemGroup>
 
