--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ModelBuilder\ModelBuilder.csproj" />
+      <ProjectReference Include="..\SourceBuilder\SourceBuilder.csproj" />
     </ItemGroup>
 
 </Project>
