--- a/SourceBuilder.Tests/SourceBuilder.Tests.csproj
+++ b/SourceBuilder.Tests/SourceBuilder.Tests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ModelBuilder\ModelBuilder.csproj" />
+      <ProjectReference Include="..\SourceBuilder\SourceBuilder.csproj" />
       <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
     </ItemGroup>
 
