--- a/Reflection/Reflection.csproj
+++ b/Reflection/Reflection.csproj
@@ -12,5 +12,9 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
       <PackageReference Include="System.Reflection.MetadataLoadContext" Version="8.0.0" />
     </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Reflection.Tests" />
+    </ItemGroup>
     
 </Project>
