--- a/test/Reflection.Tests/Reflection.Tests.csproj
+++ b/test/Reflection.Tests/Reflection.Tests.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Reflection\Reflection.csproj" />
       <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
-      <ProjectReference Include="..\Reflection\Reflection.csproj" />
     </ItemGroup>
 
     <ItemGroup>
