--- a/src/Decompiler/Decompiler.csproj
+++ b/src/Decompiler/Decompiler.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\SourceBuilder\SourceBuilder.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
+    </ItemGroup>
+
 </Project>
