Moving toward mass property dec test

--- a/test/Reflection.Tests/Reflection.Tests.csproj
+++ b/test/Reflection.Tests/Reflection.Tests.csproj
@@ -15,7 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Reflection\Reflection.csproj" />
-      <ProjectReference Include="..\..\src\SourceAnalyser\SourceAnalyser.csproj" />
+      <ProjectReference Include="..\..\src\SourceReader\SourceReader.csproj" />
       <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
     </ItemGroup>
 
