--- a/SourceParsing/SourceParsing.csproj
+++ b/SourceParsing/SourceParsing.csproj
@@ -1,18 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SourceBuilder\SourceBuilder.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
+      <ProjectReference Include="..\src\SourceBuilder\SourceBuilder.csproj" />
     </ItemGroup>
 
 </Project>
