--- a/test/SourceBuilder.Tests/SourceBuilder.Tests.csproj
+++ b/test/SourceBuilder.Tests/SourceBuilder.Tests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\SourceReader\SourceReader.csproj" />
+      <ProjectReference Include="..\..\SourceParsing\SourceParsing.csproj" />
       <ProjectReference Include="..\..\src\SourceBuilder\SourceBuilder.csproj" />
       <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
     </ItemGroup>
