--- a/src/SourceBuilding/SourceBuilding.csproj
+++ b/src/SourceBuilding/SourceBuilding.csproj
@@ -5,6 +5,7 @@
         <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>SourceBuilding</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
