--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -12,7 +12,7 @@
     
     <ItemGroup>
         <Reference Include="CTSCore">
-            <HintPath>$(MSBuildThisFileDirectory)Library\CTSCore.dll</HintPath>
+            <HintPath>$(MSBuildThisFileDirectory)ReferenceAssembly\CTSCore.dll</HintPath>
         </Reference>
     </ItemGroup>
 
