--- a/test/SourceBuilder.Tests/SourceBuilder.Tests.csproj
+++ b/test/SourceBuilder.Tests/SourceBuilder.Tests.csproj
@@ -9,7 +9,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\SourceParsing\SourceParsing.csproj" />
-      <ProjectReference Include="..\..\src\SourceBuilder\SourceBuilder.csproj" />
+      <ProjectReference Include="..\..\src\SourceBuilding\SourceBuilding.csproj" />
+      <ProjectReference Include="..\..\src\SourceParsing\SourceParsing.csproj" />
       <ProjectReference Include="..\Reflection.Tests.Types\Reflection.Tests.Types.csproj" />
     </ItemGroup>
 
