--- a/RepriseCmd/RepriseCmd.csproj
+++ b/RepriseCmd/RepriseCmd.csproj
@@ -13,6 +13,10 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.6.24327.7" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-preview.6.24327.7" />
       <PackageReference Include="Oakton" Version="6.1.0" />
+      <PackageReference Include="Serilog" Version="4.0.1-dev-02205" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
