Ready to build console app

--- a/src/CodeBuilder/CodeBuilder.csproj
+++ b/src/CodeBuilder/CodeBuilder.csproj
@@ -12,4 +12,12 @@
       <PackageReference Include="System.CodeDom" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Templates\ProjectFile" />
+      <None Include="Templates\ProjectFile.csproj" />
+      <None Include="Templates\ProjectFile.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
