--- a/RepriseCmd/RepriseCmd.csproj
+++ b/RepriseCmd/RepriseCmd.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\src\CodeBuilder\CodeBuilder.csproj" />
+    </ItemGroup>
+
 </Project>
