--- a/src/CodeBuilder/Templates/ProjectFile.csproj
+++ b/src/CodeBuilder/Templates/ProjectFile.csproj
@@ -6,5 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <PropertyGroup Label="RepriseInfo">
+        <Version>{{model.reprise_version}}</Version>
+    </PropertyGroup>
 
 </Project>
