--- a/src/RepriseCmd/RepriseCmd.csproj
+++ b/src/RepriseCmd/RepriseCmd.csproj
@@ -24,4 +24,10 @@
       <ProjectReference Include="..\src\CodeBuilder\CodeBuilder.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
