--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,13 @@
 <Project>
     
-    <ItemGroup>
+    <ItemGroup Label="Logging">
+        <PackageReference Include="Serilog" Version="4.0.1-dev-02205" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    </ItemGroup>
+    
+    <ItemGroup Label="FunctionalPatterns">
         <PackageReference Include="Vogen" Version="4.0.12" />
     </ItemGroup>
     
