Also removed old code

--- a/src/SourceBuilding/SourceBuilding.csproj
+++ b/src/SourceBuilding/SourceBuilding.csproj
@@ -26,4 +26,8 @@
       <None Remove="Templates\dto.txt" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="PropertyBuilder.cs" />
+    </ItemGroup>
+
 </Project>
