Busy refactoring to reduce duplicated code efforts

--- a/src/Reflection/Reflection.csproj
+++ b/src/Reflection/Reflection.csproj
@@ -16,5 +16,9 @@
     <ItemGroup>
         <InternalsVisibleTo Include="Reflection.Tests" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Map.cs" />
+    </ItemGroup>
     
 </Project>
