--- a/test/Reflection.IntegrationTests/Reflection.IntegrationTests.csproj
+++ b/test/Reflection.IntegrationTests/Reflection.IntegrationTests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>Reflection.IntegrationTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,9 +21,6 @@
 
     <ItemGroup>
       <None Remove="CtsCoreDbSetTypeList" />
-      <Content Include="CtsCoreDbSetTypeList">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
     </ItemGroup>
 
 </Project>
