Some anity going back to basics and directly invoking a single command

--- a/src/RepriseCmd/RepriseCmd.csproj
+++ b/src/RepriseCmd/RepriseCmd.csproj
@@ -26,4 +26,10 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="RepriseCommandCreator.cs" />
+      <Compile Remove="RepriseHostBuilder.cs" />
+      <Compile Remove="Commands\InputForBuildType.cs" />
+    </ItemGroup>
+
 </Project>
