--- a/src/CodeBuilder/CodeBuilder.csproj
+++ b/src/CodeBuilder/CodeBuilder.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Rascal" Version="1.1.0" />
       <PackageReference Include="Scriban" Version="5.10.0" />
       <PackageReference Include="System.CodeDom" Version="6.0.0" />
     </ItemGroup>
