Renamed project and namespace because `Scaffolder` is not a word!

--- a/src/RepriseCmd/RepriseCmd.csproj
+++ b/src/RepriseCmd/RepriseCmd.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CodeScaffolder\CodeScaffolder.csproj" />
+      <ProjectReference Include="..\CodeScaffolding\CodeScaffolding.csproj" />
       <ProjectReference Include="..\src\CodeBuilder\CodeBuilder.csproj" />
     </ItemGroup>
 
