--- a/src/CodeScaffolding/CodeScaffolding.csproj
+++ b/src/CodeScaffolding/CodeScaffolding.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>CodeScaffolding</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
