--- a/test/CodeScaffolderIntegrationTests/CodeScaffolderIntegrationTests.csproj
+++ b/test/CodeScaffolderIntegrationTests/CodeScaffolderIntegrationTests.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\CodeScaffolder\CodeScaffolder.csproj" />
+      <ProjectReference Include="..\..\src\CodeScaffolding\CodeScaffolding.csproj" />
     </ItemGroup>
 
 </Project>
