--- a/src/CodeScaffolding/CodeScaffolding.csproj
+++ b/src/CodeScaffolding/CodeScaffolding.csproj
@@ -17,4 +17,10 @@
       <None Remove="Templates\ProjectFile" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.7\Microsoft.AspNetCore.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
