--- a/src/CodeGenerators/CodeGenerators.csproj
+++ b/src/CodeGenerators/CodeGenerators.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Rascal" Version="1.1.0" />
       <PackageReference Include="Scriban" Version="5.10.0" />
+      <PackageReference Include="Semver" Version="3.0.0-beta.1" />
       <PackageReference Include="System.CodeDom" Version="6.0.0" />
     </ItemGroup>
 
