--- a/src/RepriseCmd/RepriseCmd.csproj
+++ b/src/RepriseCmd/RepriseCmd.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CodeGenerators\CodeGenerators.csproj" />
+      <ProjectReference Include="..\CodeGeneration\CodeGeneration.csproj" />
       <ProjectReference Include="..\src\CodeBuilder\CodeBuilder.csproj" />
     </ItemGroup>
 
