--- a/CodeGenerationTests/CodeGenerationTests.csproj
+++ b/CodeGenerationTests/CodeGenerationTests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>CodeGeneratorTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,10 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\src\CodeGeneration\CodeGeneration.csproj" />
     </ItemGroup>
 
 </Project>
