--- a/test/CodeScaffolderIntegrationTests/CodeScaffolderIntegrationTests.csproj
+++ b/test/CodeScaffolderIntegrationTests/CodeScaffolderIntegrationTests.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\..\src\CodeGeneration\CodeGeneration.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Rascal" Version="1.1.0" />
+    </ItemGroup>
+
 </Project>
