--- a/test/CodeGenerationTests/CodeGenerationTests.csproj
+++ b/test/CodeGenerationTests/CodeGenerationTests.csproj
@@ -12,7 +12,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\CodeGeneration\CodeGeneration.csproj" />
-      <ProjectReference Include="..\src\CodeGeneration\CodeGeneration.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Build" Version="17.10.4" ExcludeAssets="runtime" />
+      <PackageReference Include="Microsoft.Build.Locator" Version="1.7.8" ExcludeAssets="runtime"  />
+      <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.10.4" ExcludeAssets="runtime"  />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
