--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -22,6 +22,9 @@
       <Reference Include="Microsoft.AspNetCore">
         <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.7\Microsoft.AspNetCore.dll</HintPath>
       </Reference>
+      <Reference Include="SampleFastEndpoints">
+        <HintPath>..\..\SampleFastEndpoints\bin\Debug\net8.0\SampleFastEndpoints.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
