Removed CodeDom from app generators

--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -33,4 +33,8 @@
       <Compile Remove="TypeBuilder.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Reflection\Reflection.csproj" />
+    </ItemGroup>
+
 </Project>
